--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
-title: shalynbarrios's personal blog
+title: shalynbarrios's blog
 description: This is where I share stuff about my life
 author: shalynbarrios
